Simplify policy import model: replace entriesAdditions and importsAliases with entry-level references
Resolves #2423

Replace the `entriesAdditions`, `importsAliases`, and per-import alias
concepts with a single `references` array on policy entries. Each
reference is either an import reference
(`{"import": "policyId", "entry": "label"}`) or a local reference
(`{"entry": "label"}`), inheriting subjects, resources, and namespaces
from the referenced entry. Local and import references share the same
merge semantics; only the lookup site differs.

The previously-introduced `allowedImportAdditions` field is renamed
to `allowedAdditions` (the field now governs both local and import
references) and gains explicit three-tier semantics:
- absent      → no restriction (upgrade-friendly default)
- empty `[]`  → deny all own additions
- list        → only the listed kinds (subjects/resources/namespaces)
                of own additions survive at enforcement time

`allowedAdditions` is enforced at resolution time as a runtime filter
on the referencing entry's own additions. The strictest set across all
references on an entry applies. The write itself is not rejected for
own additions that violate the filter — they are silently stripped at
enforcement time. This is intentional: effective permissions depend on
the live state of every referenced entry, which can change.

Model:
- Add `EntryReference` with import and local reference variants
- Add `references` array on `PolicyEntry`; subjects and resources
  become optional when references are present
- Rename `AllowedImportAddition` → `AllowedAddition` and the
  corresponding constants/methods/signal types/HTTP paths
- Strict parsing of `references` and `allowedAdditions` arrays via
  shared `PoliciesModelFactory` helpers (non-object/non-string
  elements rejected with `PolicyEntryInvalidException`)
- Reject `{"import": null}` and `{"import": ""}` explicitly in
  `ImmutableEntryReference.fromJson`
- Lenient parsing for legacy `ent